# Security-Intent-Auditor

./: README.md  auditor.py  main.py  pyproject.toml
configs/: README.md  iam_payroll_config.json  network_firewall_rules.yaml
policies/: README.md  data_protection_standards.txt  hr_access_intent.txt  network_isolation_rules.txt
